--- a/.env
+++ b/.env
@@ -7,5 +7,5 @@
 
 
 
-VITE_YOUTUBE_API_KEY=''
-# VITE_YOUTUBE_API_KEY='299f98d73emsh6f8d38efe5bf53ap1db56cjsnb70bf3fd0e36'
+# VITE_YOUTUBE_API_KEY=''
+VITE_YOUTUBE_API_KEY='299f98d73emsh6f8d38efe5bf53ap1db56cjsnb70bf3fd0e36'
